<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.netcracker.cloud</groupId>
    <artifactId>rest-libraries</artifactId>
    <packaging>pom</packaging>
    <version>7.0.1-SNAPSHOT</version>

    <licenses>
        <license>
            <name>Apache-2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <properties>
        <java.version>21</java.version>
    </properties>

    <modules>
        <module>restlegacy</module>
        <module>webclient</module>
        <module>route-registration</module>
        <module>rest-libraries-bom</module>
        <module>rest-libraries-parent</module>
        <module>config-server-loader</module>
        <module>rest-third-party</module>
        <module>consul-config-provider</module>
        <module>rest-api-deprecation-switcher</module>
        <module>log-manager</module>
        <module>security</module>
        <module>report-aggregate</module>
    </modules>

    <scm>
        <connection>scm:git:https://github.com/Netcracker/qubership-core-rest-libraries.git</connection>
        <developerConnection>scm:git:https://github.com/Netcracker/qubership-core-rest-libraries.git
        </developerConnection>
        <url>https://github.com/Netcracker/qubership-core-rest-libraries</url>
        <tag>rest-libraries-6.2.5</tag>
    </scm>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.15.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>github</id>
            <url>https://maven.pkg.github.com/netcracker/*</url>
            <snapshots />
        </repository>
    </repositories>

    <distributionManagement>
        <repository>
            <id>github</id>
            <url>https://maven.pkg.github.com/netcracker/qubership-core-rest-libraries</url>
        </repository>
    </distributionManagement>
</project>
